--- a/src/pug/components/powercontrol/_powercontrol.pug
+++ b/src/pug/components/powercontrol/_powercontrol.pug
@@ -2,7 +2,7 @@
 
 section.section#powercontrol.powercontrol
 
-  //.section__bg.section__bg--dark
+  .section__bg.section__bg--dark
 
   .c-grid
     .powercontrol__wrapper
