--- a/src/pug/powercontrol.pug
+++ b/src/pug/powercontrol.pug
@@ -11,6 +11,7 @@ block content
 
     include ./components/powercontrol/_powercontrol
     include ./components/pedalbox/_details
+    include ./components/powercontrol/_save
     include ./components/powercontrol/_period
     include ./components/pedalbox/_item
     include ./components/pedalbox/_application
