--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -72,3 +72,4 @@
 @import "_components/powercontrol/period";
 @import "_components/powercontrol/types";
 @import "_components/powercontrol/order";
+@import "_components/powercontrol/save";
