--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -73,3 +73,4 @@
 @import "_components/powercontrol/types";
 @import "_components/powercontrol/order";
 @import "_components/powercontrol/save";
+@import "_components/powercontrol/article";
