Powercontrol page - create assembly section - w\ adaptive.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -74,3 +74,4 @@
 @import "_components/powercontrol/order";
 @import "_components/powercontrol/save";
 @import "_components/powercontrol/article";
+@import "_components/powercontrol/assembly";
