--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -13118,4 +13118,215 @@ section.section {
   padding-right: 115px;
 }
 
+/* line 3, src/scss/_components/powercontrol/_assembly.scss */
+.assembly {
+  padding-top: 55px;
+  padding-bottom: 100px;
+}
+
+/* line 7, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 43px;
+}
+
+/* line 13, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__header > div:nth-of-type(1) {
+  width: 100%;
+  max-width: calc(100% - 135px);
+  padding-left: 90px;
+}
+
+/* line 19, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__header > div:nth-of-type(2) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 135px;
+  padding-right: 25px;
+}
+
+/* line 28, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__title {
+  color: #0a1723;
+  font-size: 48px;
+  font-weight: bold;
+}
+
+/* line 34, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+/* line 38, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__wrapper-left, .assembly__wrapper-right {
+  width: 100%;
+}
+
+/* line 43, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__wrapper-left {
+  padding-left: 90px;
+  max-width: calc(100 - 625px);
+}
+
+/* line 48, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__wrapper-right {
+  max-width: 625px;
+  padding: 0 25px;
+}
+
+/* line 52, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__wrapper-right img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 25px;
+}
+
+/* line 58, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__wrapper-right img:last-of-type {
+  margin-bottom: 0;
+}
+
+/* line 65, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+/* line 69, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__list-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  padding-bottom: 40px;
+}
+
+/* line 75, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__list-item > div:nth-of-type(1) {
+  position: relative;
+  width: 68px;
+}
+
+/* line 80, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__list-item > div:nth-of-type(2) {
+  width: 100%;
+  max-width: calc(100% - 68px);
+  padding-right: 90px;
+}
+
+/* line 87, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__list-item h3,
+.assembly__list-item p {
+  color: #0a1723;
+}
+
+/* line 91, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__list-item h3 span,
+.assembly__list-item p span {
+  font-weight: bold;
+}
+
+/* line 96, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__list-item h3 {
+  padding-bottom: 10px;
+  font-size: 23px;
+  font-weight: bold;
+}
+
+/* line 102, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__list-item p {
+  font-size: 18px;
+}
+
+/* line 107, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__list-num {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 49px;
+  height: 49px;
+  border-radius: 100%;
+  border: 1px solid #95a6b2;
+  background-color: transparent;
+  color: #95a6b2;
+  font-size: 29px;
+  font-weight: 300;
+}
+
+@media screen and (max-width: 767px) {
+  /* line 107, src/scss/_components/powercontrol/_assembly.scss */
+  .assembly__list-num {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 17px;
+  }
+}
+
+/* line 126, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__list-line {
+  position: absolute;
+  top: 49px;
+  left: 0;
+  width: 49px;
+  height: calc(100% - 24px);
+  padding: 12px;
+}
+
+/* line 134, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__list-line:before {
+  content: '';
+  z-index: -1;
+  position: absolute;
+  top: 12px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 1px;
+  height: calc(100% - (24px));
+  background-color: #95a6b2;
+}
+
+/* line 146, src/scss/_components/powercontrol/_assembly.scss */
+.assembly__list-line:after {
+  content: '';
+  position: absolute;
+  bottom: 12px;
+  left: 50%;
+  padding: 3px;
+  border: solid #95a6b2;
+  border-width: 0 1px 1px 0;
+  -webkit-transform: translateX(-50%) rotate(45deg);
+      -ms-transform: translateX(-50%) rotate(45deg);
+          transform: translateX(-50%) rotate(45deg);
+}
+
 /*# sourceMappingURL=maps/app.css.map */
