--- a/src/pug/powercontrol.pug
+++ b/src/pug/powercontrol.pug
@@ -13,6 +13,7 @@ block content
     include ./components/pedalbox/_details
     include ./components/powercontrol/_save
     include ./components/powercontrol/_article
+    include ./components/powercontrol/_assembly
     include ./components/powercontrol/_period
     include ./components/pedalbox/_item
     include ./components/pedalbox/_application
