Powercontrol page - create generation section - w\ adaptive.

--- a/src/pug/powercontrol.pug
+++ b/src/pug/powercontrol.pug
@@ -17,6 +17,8 @@ block content
     include ./components/powercontrol/_period
     include ./components/pedalbox/_item
     include ./components/pedalbox/_application
+    include ./components/powercontrol/_generation
+    include ./components/powercontrol/_wiring
     include ./components/powercontrol/_types
     include ./components/powercontrol/_order
     include ./components/pedalbox/_certificates
