--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -75,3 +75,5 @@
 @import "_components/powercontrol/save";
 @import "_components/powercontrol/article";
 @import "_components/powercontrol/assembly";
+@import "_components/powercontrol/generation";
+@import "_components/powercontrol/wiring";
