--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -13329,4 +13329,78 @@ section.section {
           transform: translateX(-50%) rotate(45deg);
 }
 
+/* line 3, src/scss/_components/powercontrol/_generation.scss */
+.generation {
+  padding-top: 180px;
+  padding-bottom: 65px;
+}
+
+/* line 8, src/scss/_components/powercontrol/_generation.scss */
+.generation__wrapper-0 {
+  padding-bottom: 100px;
+}
+
+/* line 11, src/scss/_components/powercontrol/_generation.scss */
+.generation__wrapper-0 .details__wrapper-2 {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+/* line 20, src/scss/_components/powercontrol/_generation.scss */
+.generation__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding-bottom: 50px;
+}
+
+/* line 25, src/scss/_components/powercontrol/_generation.scss */
+.generation__block-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+/* line 30, src/scss/_components/powercontrol/_generation.scss */
+.generation__block-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 350px;
+  padding-right: 60px;
+}
+
+/* line 37, src/scss/_components/powercontrol/_generation.scss */
+.generation__block-right {
+  width: 100%;
+  max-width: calc(100% - 350px);
+  padding-right: 100px;
+}
+
+/* line 43, src/scss/_components/powercontrol/_generation.scss */
+.generation__block-title {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+/* line 48, src/scss/_components/powercontrol/_generation.scss */
+.generation__block-text {
+  font-size: 18px;
+}
+
 /*# sourceMappingURL=maps/app.css.map */
