--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -77,3 +77,4 @@
 @import "_components/powercontrol/assembly";
 @import "_components/powercontrol/generation";
 @import "_components/powercontrol/wiring";
+@import "_components/powercontrol/created";
